# spurilo

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/spurilo/: Cargo.toml
crates/spurilo/src/: lib.rs  main.rs
src/: lib.rs  main.rs
