[package]
name = "spurilo"
version = "0.1.0"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.5"
console = "0.15.0"
geo = "0.18.0"
geojson = "0.22.2"
gpx = "0.8.5"
reqwest = { version = "0.11.6", features = ["json"] }
serde_json = "1.0.70"
tokio = { version = "1.13.0", features = ["full"] }
