[package]
name = "spurilo"
version = "0.1.0"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
edition = "2021"

[profile.release]
lto = true

[dependencies]
chrono = "0.4.19"
clap = "3.1.8"
console = "0.15.0"
geo = "0.19.0"
geojson = "0.22.3"
gpx = "0.8.5"
piet-common = { version = "0.5.0", features = ["png"] }
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
