[package]
name = "spurilo"
description = "The toolbox for parsing and manipulating .GPX files"
version = "0.1.0-beta.1"
authors = ["Cédric Eberhardt <hello+code@cedeber.fr>"]
edition = "2021"

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
console = "0.15.0"
geo = "0.20.1"
geojson = "0.22.3"
gpx = "0.8.5"
piet-common = { version = "0.5.0", features = ["png"] }
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
